features without unittest

--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -31,7 +31,7 @@ button.x-small {
   background: linear-gradient(to bottom, #fff 0%, #f3f7f7 100%);
 }
 
-.app-product-list {
+.product-list {
   flex: 1 1 100%;
   /*min-height: calc(100vh - 64px);*/
 }
